# Project-W

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONFIGURATION_GUIDE.md  ENHANCEMENT_ANALYSIS.md  Makefile  PITCH_SCRIPT.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  mvp_build_plan.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  deploy.yml  e2e.yml
deploy/: cloudbuild.yaml  scheduler-setup.sh
scripts/: dev_start.sh  enrich_existing.py  fix_ingest_status.py  reclassify_unknown.py  run_ingest.py  seed_demo_data.py  seed_dev_data.py
services/: bid_ingester  license_scraper  permit_ingester
services/api-server/: Dockerfile  auth.py  cache.py  dependencies.py  main.py  requirements.txt  websocket_manager.py
services/bid-ingester/: Dockerfile  census_client.py  ingester.py  main.py  requirements.txt  sam_client.py  usaspending_client.py
services/etl-pipeline/: Dockerfile  deduplicator.py  enricher.py  main.py  normalizer.py  pipeline.py  requirements.txt  scorer.py  trade_classifier.py
services/license-scraper/: Dockerfile  base_scraper.py  main.py  orchestrator.py  requirements.txt
services/permit-ingester/: Dockerfile  arcgis_client.py  ckan_client.py  field_mapper.py  ingester.py  main.py  requirements.txt  socrata_client.py  sources.yaml
shared/: config.py  constants.py  logging_config.py  requirements.txt  utils.py
shared/clients/: firestore_client.py  storage_client.py
shared/models/: __init__.py  bid.py  (+4 more)
tests/: conftest.py
(+65 files in other folders)
